--- a/src/app/_components/forgetpassword/forgetpassword.component.html
+++ b/src/app/_components/forgetpassword/forgetpassword.component.html
@@ -17,12 +17,12 @@
               <input class="form-control gr-text-11 border" type="email" id="email" placeholder="i.e. john@mail.com">
             </div>
             <div class="button-block mt-3 ">
-              <button class="form-btn btn btn-primary w-100">Send Reset Link</button>
+              <button class="form-btn btn btn-info w-100">Send Reset Link</button>
             </div>
           </form>
         </div>
         <div class="form-bottom excerpt text-center">
-          <p class="sign-up-text gr-text-9 gr-text-color">Rememered the password?<a href="signin" class="text-primary"> Sign in now</a></p>
+          <p class="sign-up-text gr-text-9 gr-text-color">Rememered the password?<a href="signin" class="text-info"> Sign in now</a></p>
         </div>
       </div>
     </div>
