--- a/src/app/_components/header/header.component.html
+++ b/src/app/_components/header/header.component.html
@@ -277,7 +277,7 @@
                 <ul class="gr-menu-dropdown dropdown-menu" aria-labelledby="navbarDropdown02">
                   <li class="drop-menu-item">
                     <a href="signupnurse">
-                      Nurse Sign Up
+                      Dental Care Professional Sign Up
                     </a>
                   </li>
                   <li class="drop-menu-item">
