logout api functional

--- a/src/app/_pages/signup/signup.component.html
+++ b/src/app/_pages/signup/signup.component.html
@@ -31,12 +31,12 @@
           <div class="row location-filter-form d-flex flex-wrap justify-content-center">
             <div class="col-md-4 col-sm-4 col-xs-4 mb-4">
               <a href="signuppractice">
-                <button type="submit" class="btn btn-primary search-btn">Sign Up as Practice</button>
+                <button type="submit" class="btn btn-info search-btn">Sign Up as Practice</button>
               </a>
             </div>
             <div class="col-md-4 col-sm-4 col-xs-4 mb-4">
               <a href="signupnurse">
-                <button type="submit" class="btn btn-primary search-btn">Sign Up as DCP</button>
+                <button type="submit" class="btn btn-info search-btn">Sign Up as Dental Nurse Professional</button>
               </a>
             </div>
           </div>
